--- a/backend/templates/base/dashboard.html
+++ b/backend/templates/base/dashboard.html
@@ -38,13 +38,13 @@
                   </div>
                   <div class="col-6">
                     <div id="dialog_community" title="Please choose a Community">
-                      <p>Please select a Community name in the left search bar</p>
+                      Please select a Community name in the left search bar
                     </div>
                     <div id="dialog_project" title="Please choose a Project Name">
-                      <p>Please select a Project name in the left search bar</p>
+                      Please select a Project name in the left search bar
                     </div>
                     <div id="dialog_type" title="Please choose a Property Type">
-                      <p>Please select a Property type in the left search bar</p>
+                      Please select a Property type in the left search bar
                     </div>
                     <div class="container text-end">
                       <a
