--- a/backend/templates/base/post_detail.html
+++ b/backend/templates/base/post_detail.html
@@ -7,8 +7,8 @@
         <h2>{{post.title}}</h2>
       </div>
       {{post.text}}
-      
-      <!-- <img src="static/images/posts/all_price_dynamics.JPG"> -->
+<!-- 
+      <img src="{% static 'images/posts/all_price_dynamics.JPG' %}" /> -->
     </div>
     <div class="col-4">
       <div class="mb-5 border-top border-bottom border-3 pt-4 pb-4">
