google analytics added

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -72,6 +72,17 @@
       crossorigin="anonymous"
     ></script>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0MWYJ6Z9NQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || []
+    function gtag() {
+      dataLayer.push(arguments)
+    }
+    gtag('js', new Date())
+
+    gtag('config', 'G-0MWYJ6Z9NQ')
+  </script>
   <body>
     {% block content %} {% endblock content %}
   </body>
