--- a/backend/static/css/styles.css
+++ b/backend/static/css/styles.css
@@ -137,3 +137,16 @@ p {
 option :hover {
   background: #30cae9;
 }
+/* 
+@media (max-width: @screen-xs) {
+  body{font-size: 10px;}
+}
+
+@media (max-width: @screen-sm) {
+  body{font-size: 14px;}
+}
+
+
+h5{
+  font-size: 1.4rem;
+}   */
