--- a/backend/templates/base/dashboard.html
+++ b/backend/templates/base/dashboard.html
@@ -224,7 +224,7 @@
     if (url.searchParams.size === 0) {
       $.ajax({
         method: 'GET',
-        url: 'http://127.0.0.1:8000',
+        url: 'http://www.dxbstates.com/',
         data: {
           master_project: null,
           project_name: null,
@@ -315,7 +315,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'http://127.0.0.1:8000',
+      url: 'http://www.dxbstates.com/',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
@@ -390,7 +390,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'http://127.0.0.1:8000',
+      url: 'http://www.dxbstates.com/',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
@@ -459,7 +459,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'http://127.0.0.1:8000',
+      url: 'http://www.dxbstates.com/',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
@@ -532,7 +532,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'http://127.0.0.1:8000',
+      url: 'http://www.dxbstates.com/',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
@@ -599,7 +599,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'http://127.0.0.1:8000',
+      url: 'http://www.dxbstates.com/',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
@@ -666,7 +666,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'http://127.0.0.1:8000',
+      url: 'http://www.dxbstates.com/',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
