--- a/backend/templates/base/chart.html
+++ b/backend/templates/base/chart.html
@@ -375,7 +375,7 @@
             },
 
             layout: {
-              responsive: true,
+              // responsive: true,
               maintainAspectRatio: false,
             },
 
