--- a/backend/static/css/styles.css
+++ b/backend/static/css/styles.css
@@ -42,27 +42,26 @@ p {
   margin-left: 1.5em;
 }
 
-/* #myChartLine,
+#myChartLine,
 #myChartBar {
   width: 50%;
   height: 50%;
-} */
+}
 
 /* .card, .card-body {
   width: 700px;
   height: 350px;
 } */
 
+/* .card-body {
+  width: 700px;
+  height: 350px
+} */
+
 @media only screen and (max-width: 450px) {
   .card-body {
     height: 300px;
   }
-  /* .chart-container {
-    position: relative;
-    margin: auto;
-    height: 80vh;
-    width: 80vw;
-  } */
 }
 
 /*alert dialog*/
