--- a/backend/templates/base/dashboard.html
+++ b/backend/templates/base/dashboard.html
@@ -36,8 +36,8 @@
                   <div id="dialog_project" title="Please choose a Project Name">Please select a Project name in the left search bar</div>
                   <div id="dialog_type" title="Please choose a Property Type">Please select a Property type in the left search bar</div>
                   <div class="container text-end">
-                    <a href="{% url 'all-transactions' %}" class="btn btn-primary" id="all_transactions_button">
-                      <p class="h6">See all transactions >>></p>
+                    <a href="{% url 'all-transactions' %}" class="btn btn-primary">
+                      <div id="all_transactions_button">See all transactions >>></div>
                     </a>
                   </div>
                 </div>
