--- a/backend/templates/base/dashboard.html
+++ b/backend/templates/base/dashboard.html
@@ -26,7 +26,7 @@
         <div id="available-data">
           <!-- Bar Chart -->
           <div class="container" id="bar-chart">
-            <div class="card shadow p-3 bg-white rounded">
+            <div class="card shadow bg-white rounded">
               <div class="card-body">
                 <div class="d-flex justify-content-between">
                   <div id="charts-title">
@@ -43,7 +43,7 @@
                 </div>
                 <!-- <div>
                   <div class="chart-container"> -->
-                <canvas id="myChartbar"></canvas>
+                <canvas class="mt-4" id="myChartbar"></canvas>
                 <!-- </div>
                 </div> -->
               </div>
@@ -51,7 +51,7 @@
           </div>
           <!-- Line Chart -->
           <div class="container mt-3 mb-3" id="line-chart">
-            <div class="card shadow p-3 mb-5 bg-white rounded">
+            <div class="card shadow mb-5 bg-white rounded">
               <div class="card-body pb-5">
                 <div class="row mb-3">
                   <div class="col-6">
