--- a/backend/templates/base/dashboard.html
+++ b/backend/templates/base/dashboard.html
@@ -200,7 +200,7 @@
     if (url.searchParams.size === 0) {
       $.ajax({
         method: 'GET',
-        url: 'https://www.dxbstates.com/',
+        url: 'https://www.dxbstates.com',
         data: {
           master_project: null,
           project_name: null,
@@ -291,7 +291,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'https://www.dxbstates.com/',
+      url: 'https://www.dxbstates.com',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
@@ -366,7 +366,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'https://www.dxbstates.com/',
+      url: 'https://www.dxbstates.com',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
@@ -435,7 +435,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'https://www.dxbstates.com/',
+      url: 'https://www.dxbstates.com',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
@@ -508,7 +508,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'https://www.dxbstates.com/',
+      url: 'https://www.dxbstates.com',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
@@ -575,7 +575,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'https://www.dxbstates.com/',
+      url: 'https://www.dxbstates.com',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
@@ -642,7 +642,7 @@
 
     $.ajax({
       method: 'GET',
-      url: 'https://www.dxbstates.com/',
+      url: 'https://www.dxbstates.com',
       data: {
         master_project: selectedMasterProject,
         project_name: selectedProjectName,
